--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="hex-colors">
+            <h1>Click the button</h1>
+            <button onclick="colorChanger()" type="button" class="btn btn-dark">Color Changer</button>
+            <h2>The hex color is #<span id="hexCode">000000</span>!</h2>
+        </div>
+    </div>
 </body>
 </html>
